made projects and now swagger works
