# routes/project.go
@@ -6,5 +6,8 @@ import (
 )
 
 func ProjectRoute(router *gin.Engine) {
-	router.GET("/projects", controller.ProjectController)
+	router.GET("/api/projects", controller.GetProjects)
+	router.POST("/api/projects", controller.CreateProject)
+	router.Static("/project-images", "./upload_directory")
+	router.Run(":8081")
 }
